--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: cpp
+dist: bionic
 sudo: false
 
 matrix:
@@ -8,10 +9,8 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - george-edison55-precise-backports
           packages:
             - cmake
-            - cmake-data
             - gcc-10
             - g++-10
       env: COMPILER=g++-10
@@ -19,7 +18,6 @@ matrix:
       addons:
         apt:
           sources:
-            - kubuntu-backports
             - ubuntu-toolchain-r-test
             - llvm-toolchain-precise-10
           packages:
