--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ branches:
 before_script:
   - export CC=$COMPILER
   - export CXX=$COMPILER
-  - wget ttps://github.com/Snaipe/Criterion/releases/download/v2.3.3/criterion-v2.3.3.tar.bz2 && tar xaf criterion-v2.3.3.tar.bz2 && cd criterion-v2.3.3.tar.bz2 && cmake CMakeLists && make && sudo make install && ldconfig
+  - wget ttps://github.com/Snaipe/Criterion/releases/download/v2.3.3/criterion-v2.3.3.tar.bz2 && tar xaf criterion-v2.3.3.tar.bz2 && cd criterion-v2.3.3.tar.bz2 && cmake CMakeLists.txt && make && sudo make install && ldconfig
 
 
 script:
