--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ branches:
 before_script:
   - export CC=$CC_COMPILER
   - export CXX=$COMPILER
-  - wget https://github.com/Snaipe/Criterion/releases/download/v2.3.3/criterion-v2.3.3.tar.bz2 && tar xaf criterion-v2.3.3.tar.bz2 && cd criterion-v2.3.3 && cmake CMakeLists.txt && make && sudo make install && ldconfig
+  - wget https://github.com/Snaipe/Criterion/releases/download/v2.3.3/criterion-v2.3.3.tar.bz2 && tar xaf criterion-v2.3.3.tar.bz2 && cd criterion-v2.3.3 && cmake CMakeLists.txt && make && sudo make install && sudo ldconfig
 
 
 script:
