--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
             - gcc-10
             - g++-10
             - wget
+            - cpputest
       env:
         - COMPILER=g++-10
         - CC_COMPILER=gcc-10
@@ -27,6 +28,7 @@ matrix:
             - cmake
             - clang-10
             - wget
+            - cpputest
       env:
         - COMPILER=clang++-10
         - CC_COMPILER=clang-10
@@ -38,8 +40,6 @@ branches:
 before_script:
   - export CC=$CC_COMPILER
   - export CXX=$COMPILER
-  - wget https://github.com/Snaipe/Criterion/releases/download/v2.3.3/criterion-v2.3.3.tar.bz2 && tar xaf criterion-v2.3.3.tar.bz2 && cd criterion-v2.3.3 && cmake CMakeLists.txt && make && sudo make install && sudo ldconfig && cd ..
-
 
 script:
   - cmake CMakeLists.txt -DGRAPHTHEWY_BUILD_TESTS=ON
